/*
 * $Id: ChangeLog,v 1.730 2003/02/18 13:09:05 iananderson Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-18 14:15 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * contrib/mysql/tmysql.prg
    ! Fixed Goto() method from TMySQLQuery Fix provide by Srdjan Dragojlovic <digikv@ptt.yu>
  * contrib/mysql/mysql.c
    ! Fixed GPF when mysql Server is not Online

2003-02-18 14:00 UTC+0100 Ian Anderson <ianderson@procon-online.de>
    * added code to configure() so that it handles headers and
      footers the same way as clipper 5.2e when the separator char for
      header and footer are set, but there is no header or footer
      text in any of the columns. Previously in this case the header
      or footer was not drawn. Now it is.

2003-02-17 22:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * contrib/mysql/mysql.prg
    ! Fixed Eof in method GetRow() from TMySQLQuery
    ! Fixed GoBottom() method in  TMySQLQuery
    Changes provided and fixed by Rafael Letocart
    !Fix makePrimaryKeyWhere() method that was returning an invalid value when Doing an Sql Update or Delete

2003-02-17 11:15 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
   * include/hbexprb.c
        ! fix bug on function RIGHT() if string is zero length.)

2003-02-16 18:30 UTC+0300 Phil Krylov <phil@mail.ru>
  * source/rtl/diskspac.c
    ! On HB_OS_BSD, include <sys/param.h> and <sys/mount.h> instead of
      <sys/vfs.h>.
  * source/rtl/seconds.c
    ! On HB_OS_BSD, include <sys/times.h> too.


2003-02-16 15:05 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/trpc.prg
    ! Fixed an error in compressed/async function execution (prototype was wrong)

  * source/rtl/trpccli.prg
    ! Fixed various errors in compressed/async function call.

  * tests/rpcclient.prg
    ! Added a compressed and asynchronous function call test
